--- a/expe.tex
+++ b/expe.tex
@@ -13,7 +13,16 @@ The reflection could not be directly measured in the setup described, but at the
 \subsection{Terahertz pulse generation}%{{{
 % TODO laser equipment
 A vital component of the TDTS setup is a source of ultrashort optical pulses. 
-We used \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with mean power of 0.5 W, central wavelength 810 nm, and a pulse duration under 70 fs.  %% TODO verify
+We used \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with mean power of 0.5 W, central wavelength 810 nm, and a pulse duration under 70 fs.  
+
+%% TODO verify
+% \cite{pashkin2004phd} In our TDTS measurements femtosecond laser ”Mira Seed” by COHERENT has been used for generation of ultrashort light pulses with following characteristics:
+	%pulse length			50 - 80 fs
+	%spectral bandwidth		15 - 40 nm	
+	%repetition rate			76 MHz
+	%energy per pulse		8 nJ      	
+	%average power			650 mW
+	%pulse peak power		140 kW    	
 The repetition rate was 70 MHz, giving the pulse energy of roughly 7 nJ, sufficient to induce transient photoconductivity in the interdigitated emitter, which consisted of a gallium arsenide slab % thickness?, material?
 with metallisation on one side forming a dense array of thin metallic wires. The voltage between the odd and even wires was 15-20 V, and was modulated in time to increase the noise-resistance of the detection system as described below.
 
