--- a/fdphd.bib
+++ b/fdphd.bib
@@ -800,7 +800,7 @@ lts.fzu.cz/pdf/d-js.pdf
   publisher={Optical Society of America}
 }
 @article{tong2012,
-  title={High power terahertz pulses generated in intense laser—plasma interactions},
+  title={High power terahertz pulses generated in intense laser-plasma interactions},
   author={Yu-Tong, Li and Wei-Min, Wang and Chun, Li and Zheng-Ming, Sheng},
   journal={Chinese Physics B},
   volume={21},
@@ -829,6 +829,103 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1991},
   publisher={AIP Publishing}
 }
+%% ultrathin ZnTe and GaP electro-optic sensors,
+@article{leitenstorfer1999detectors,
+  title={Detectors and sources for ultrabroadband electro-optic sampling: Experiment and theory},
+  author={Leitenstorfer, A and Hunsche, S and Shah, J and Nuss, MC and Knox, WH},
+  journal={Applied physics letters},
+  volume={74},
+  number={11},
+  pages={1516--1518},
+  year={1999},
+  publisher={AIP Publishing}
+}
+@article{gu1999generation,
+  title={Generation of coherent cw-terahertz radiation using a tunable dual-wavelength external cavity laser diode},
+  author={Gu, Ping and Chang, Fan and Tani, Masahiko and Sakai, Kiyomi and Pan, Ci-Ling},
+  journal={Japanese journal of applied physics},
+  volume={38},
+  number={11A},
+  pages={L1246},
+  year={1999},
+  publisher={IOP Publishing}
+}
+
+@article{auston1984picosecond,
+  title={Picosecond photoconducting Hertzian dipoles},
+  author={Auston, DH and Cheung, KP and Smith, PR},
+  journal={Applied physics letters},
+  volume={45},
+  number={3},
+  pages={284--286},
+  year={1984},
+  publisher={AIP Publishing}
+}
+@article{darrow1990subpicosecond,
+  title={Subpicosecond electromagnetic pulses from large-aperture photoconducting antennas},
+  author={Darrow, JT and Hu, BB and Zhang, X-C and Auston, DH},
+  journal={Optics letters},
+  volume={15},
+  number={6},
+  pages={323--325},
+  year={1990},
+  publisher={Optical Society of America}
+}
+@article{hu1990optically,
+  title={Optically steerable photoconducting antennas},
+  author={Hu, BB and Darrow, JT and Zhang, X-C and Auston, DH and Smith, PR},
+  journal={Applied physics letters},
+  volume={56},
+  number={10},
+  pages={886--888},
+  year={1990},
+  publisher={AIP Publishing}
+}
+@article{liu2003terahertz,
+  title={Terahertz radiation from n-type GaAs with Be-doped low-temperature-grown GaAs surface layers},
+  author={Liu, Kai and Krotkus, Arunas and Bertulis, K and Xu, Jingzhou and Zhang, X-C},
+  journal={Journal of applied physics},
+  volume={94},
+  number={5},
+  pages={3651--3653},
+  year={2003},
+  publisher={AIP Publishing}
+}
+@article{zhang1992optoelectronic,
+  title={Optoelectronic measurement of semiconductor surfaces and interfaces with femtosecond optics},
+  author={Zhang, X-C and Auston, DH},
+  journal={Journal of applied physics},
+  volume={71},
+  number={1},
+  pages={326--338},
+  year={1992},
+  publisher={AIP Publishing}
+}
+@article{heyman2001terahertz,
+  title={Terahertz emission from GaAs and InAs in a magnetic field},
+  author={Heyman, JN and Neocleous, P and Hebert, D and Crowell, PA and M{\"u}ller, T and Unterrainer, Karl},
+  journal={Physical Review B},
+  volume={64},
+  number={8},
+  pages={085202},
+  year={2001},
+  publisher={APS}
+}
+@article{corchia2001effects,
+  title={Effects of magnetic field and optical fluence on terahertz emission in gallium arsenide},
+  author={Corchia, A and McLaughlin, R and Johnston, MB and Whittaker, DM and Arnone, DD and Linfield, EH and Davies, AG and Pepper, M},
+  journal={Physical Review B},
+  volume={64},
+  number={20},
+  pages={205204},
+  year={2001},
+  publisher={APS}
+}
+
+
+
+
+
 /*}}}*/
 
 % == Simulations ==
