--- a/expe.tex
+++ b/expe.tex
@@ -11,6 +11,7 @@ The reflection could not be directly measured in the setup described, but at the
 % TODO 
 %}}}
 \subsection{Terahertz pulse generation}%{{{
+As the source of terahertz pulses, we used an interdigitated emitter from TeraSED, whose principle of operation is described in the previous section.
 % TODO laser equipment
 A vital component of the TDTS setup is a source of ultrashort optical pulses. 
 We used \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with mean power of 0.5 W, central wavelength 810 nm, and a pulse duration under 70 fs.  
@@ -23,11 +24,9 @@ We used \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with mea
 	%energy per pulse		8 nJ      	
 	%average power			650 mW
 	%pulse peak power		140 kW    	
-The repetition rate was 70 MHz, giving the pulse energy of roughly 7 nJ, sufficient to induce transient photoconductivity in the interdigitated emitter, which consisted of a gallium arsenide slab % thickness?, material?
-with metallisation on one side forming a dense array of thin metallic wires. The voltage between the odd and even wires was 15-20 V, and was modulated in time to increase the noise-resistance of the detection system as described below.
+The repetition rate was 70 MHz, giving the pulse energy of roughly 7 nJ, sufficient to induce transient photoconductivity in the interdigitated emitter, 
 
-An impinging optical pulse with femtosecond duration excites charge carriers, and the charge stored in the interdigitated electrodes discharges through the illuminated surface % radius of optical focus?
-of the GaAs slab. To ensure the photocurrent flows only in the even gaps has only one direction, every second gap between the wires was covered with nonconductive opaque paint.
+The voltage between the odd and even wires was 15-20 V, and was modulated in time to increase the noise-resistance of the detection system as described below.
 
 %% XXX
 	The leading edge of the photocurrent emits radiation typically in the form of a subpicosecond, half-cycle peak of electric field, polarized perpendicular to the wires. 
